--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.h2.console.enabled=true
 #spring.datasource.password=smtm
 
 # 생성되는 query 출력
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 # query 가독성 더 좋게 출력
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 # 쿼리 속 값 출력
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
