--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-
 spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/smtm
 #spring.datasource.username=smtm
 #spring.datasource.password=smtm
+
+#spring.datasource.schema=classpath*:schema.sql
+spring.datasource.data=classpath*:data.sql
 
 # 생성되는 query 출력
 spring.jpa.show-sql=true
