--- a/src/main/react-frontend/package.json
+++ b/src/main/react-frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^16.14.0",
     "react-calendar": "^3.2.1",
     "react-dom": "^16.14.0",
+    "react-font-face": "^0.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
