--- a/src/main/react-frontend/package.json
+++ b/src/main/react-frontend/package.json
@@ -14,7 +14,9 @@
     "react-font-face": "^0.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-simple-image-slider": "^2.0.1"
+    "react-simple-image-slider": "^2.0.1",
+    "react-slick": "^0.27.13",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
