--- a/src/main/react-frontend/package.json
+++ b/src/main/react-frontend/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.20.0",
+    "axios": ">=0.21.1",
     "cross-env": "^7.0.2",
     "react": "^16.14.0",
     "react-calendar": "^3.2.1",
